# gikwimi

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  testApp.sh.in
.tx/: config
app/: CMakeLists.txt  controlcenter.cpp  gikwimi.cpp  gikwimi.h  gikwimiconfig.cpp  gikwimiconfig.h  logging.h  login.cpp  logout.cpp  logout.h  root.cpp  root.h  userauthstoresql.cpp  userauthstoresql.h  utils.cpp  utils.h
app/controllers/: CMakeLists.txt  controlcenter.cpp  controlcenter.h  controlcenteraddressbook.cpp  controlcenteraddressbook.h  controlcenteraddressbooks.cpp  controlcenteraddressbooks.h  controlcenterevents.cpp  controlcenterevents.h  controlcentersettings.cpp  controlcentersettings.h  controlcenterusers.cpp  controlcenterusers.h  controlcenterusersettings.cpp  controlcenterusersettings.h  invitation.cpp  invitation.h  login.cpp  login.h  logout.cpp  root.cpp  root.h
app/objects/: CMakeLists.txt  addressbook.cpp  addressbook.h  addressbook_p.h  contact.cpp  contact.h  contact_p.h  error.cpp  error.h  event.cpp  event.h  event_p.h  guest.cpp  guest.h  guestgroup.cpp  guestgroup.h  invitationtemplate.cpp  invitationtemplate.h  menuitem.cpp  menuitem.h  menuitem_p.h  optionitem.cpp  optionitem.h  simpleuser.cpp  simpleuser.h  user.cpp  user.h
cmd/: CMakeLists.txt  addressbookmanager.cpp  addressbookmanager.h  cli.cpp  cli.h  command.cpp  command.h  configuration.cpp  configuration.h  controller.cpp  controller.h  database.cpp  database.h  dbmigrations.cpp  dbmigrations.h  main.cpp  setup.cpp  setup.h  usermanager.cpp  usermanager.h
cmd/commands/: CMakeLists.txt  addressbookaddcommand.cpp  addressbookaddcommand.h  addressbookcommand.cpp  addressbookcommand.h  contactcommand.cpp  contactcommand.h  contactimportcommand.cpp  contactimportcommand.h  databasecommand.cpp  databasecommand.h  databasemigrationcommand.cpp  databasemigrationcommand.h  databaserefreshcommand.cpp  databaserefreshcommand.h  databaseresetcommand.cpp  databaseresetcommand.h  databaserollbackcommand.cpp  databaserollbackcommand.h  eventaddcommand.cpp  eventaddcommand.h  eventcommand.cpp  eventcommand.h  guestcommand.cpp  guestcommand.h  guestexportcommand.cpp  guestexportcommand.h  useraddcommand.cpp  useraddcommand.h  usercommand.cpp  usercommand.h
cmd/dbmigrations/: CMakeLists.txt  dbmigrations.cpp  dbmigrations.h  m0001_create_users_table.cpp  m0001_create_users_table.h  m0002_createusersettings.cpp  m0002_createusersettings.h  m0003_createoptionstable.cpp  m0003_createoptionstable.h  m0004_createaddressbookstable.cpp  m0004_createaddressbookstable.h  m0005_createaddressestable.cpp  m0005_createaddressestable.h  m0005_createcontactstable.cpp  m0005_createcontactstable.h  m0006_createeventstable.cpp  m0006_createeventstable.h  m0007_createguestgroupstable.cpp  m0007_createguestgroupstable.h  m0007_creategueststable.cpp  m0007_creategueststable.h  m0008_creategueststable.cpp  m0008_creategueststable.h  m0009_createtemplatestable.cpp  m0009_createtemplatestable.h
common/: CMakeLists.txt  confignames.h  confignames.h.in  global.h
src/: CMakeLists.txt  gikwimi.h  root.cpp  root.h
supplementary/: CMakeLists.txt  conf.ini.in  distconf.ini.in  gikwimi-apparmor-local  gikwimi-apparmor-systemd.conf  gikwimi-apparmor.in  gikwimi-restart.service  gikwimi-restart.timer  gikwimi.service.in
templates/: CMakeLists.txt
templates/default/: CMakeLists.txt  mix-manifest.json  package-lock.json  package.json  webpack.mix.js
templates/default/assets/: CMakeLists.txt
templates/default/assets/js/: CMakeLists.txt  addgroup.js  addguest.js  editguest.js  general.js  group.js  groupAdd.js  groupRemove.js  guest.js  guestAdd.js  guestEdit.js  guestInvite.js  guestRemove.js  inviteguest.js  licenseheader.js
templates/default/assets/sass/: CMakeLists.txt  style.scss
templates/default/site/: CMakeLists.txt  base.tmpl  invitation.tmpl  login.tmpl  wrapper.tmpl
templates/default/site/controlcenter/: CMakeLists.txt
templates/default/site/controlcenter/addressbooks/: CMakeLists.txt  index.tmpl
templates/default/site/controlcenter/addressbooks/contacts/: CMakeLists.txt  index.tmpl
templates/default/site/controlcenter/events/: CMakeLists.txt  index.tmpl
templates/default/site/controlcenter/events/guestgroups/: CMakeLists.txt
templates/default/site/controlcenter/events/guests/: CMakeLists.txt  addGroupModal.tmpl  addGuestModal.tmpl  editGuestModal.tmpl  index.tmpl  invite.tmpl  inviteGuestModal.tmpl  removeGroupModal.tmpl  removeGuestModal.tmpl
templates/default/site/controlcenter/events/templates/: CMakeLists.txt  add.tmpl  edit.tmpl  index.tmpl
templates/default/site/controlcenter/settings/: CMakeLists.txt
templates/default/site/controlcenter/users/: CMakeLists.txt
templates/default/site/controlcenter/usersettings/: CMakeLists.txt
templates/default/site/inc/: CMakeLists.txt  inputWithLabel.tmpl  modal.tmpl  page_header.tmpl  rangeInputWithLabel.tmpl  textInputWithLabel.tmpl
templates/static/: .gitignore  CMakeLists.txt  esbuild.mjs  package-lock.json  package.json  webpack.mix.js
templates/static/assets/: CMakeLists.txt
translations/: CMakeLists.txt  gikwimiapp_de.ts  gikwimiapp_en.ts  gikwimictl.ts  gikwimictl_de.ts
